package quri.teelab.api.teelab.designlab.application.internal.queryservices;

import org.springframework.stereotype.Service;
import quri.teelab.api.teelab.designlab.domain.services.ProjectQueryService;

@Service
public class ProjectQueryServiceImpl implements ProjectQueryService {
}
