package quri.teelab.api.teelab.designlab.domain.model.valueobjects;

public enum GarmentSize {
}
