package quri.teelab.api.teelab.designlab.infrastructure.persistence.jpa.repositories;

public interface ProjectRepository {
}
