package quri.teelab.api.teelab.designlab.model.entities;

public class TextLayer extends Layer {
    private String text;
    private String fontColor;
    private String fontFamily;

    private Integer fontSize;
    private Boolean isBold;
    private Boolean isItalic;
    private Boolean isUnderlined;
    
}
