package quri.teelab.api.teelab.designlab.model.valueobjects;

public enum LayerType {
    IMAGE,
    VIDEO,
}
