package quri.teelab.api.teelab.designlab.model.valueobjects;

public enum ProjectStatus {
    BLUEPRINT,
    GARMENT,
    TEMPLATE
}
